# str-projeto02

./: CMakeLists.txt  README.md  main.c  makefile  tasks.json  tasks2.json
